# vocagtk

./: meson.build
include/: album.h  artist.h  data.h  db.h  dl.h  entry.h  entrybox.h  exterr.h  helper.h  parse.h  res.h  song.h  ui.h
res/: res.gresource.xml
res/ui/: ctrl.ui  entry.ui  entrylist.ui  main.ui  search.ui
src/: album.c  artist.c  data.c  db.c  dl.c  entry.c  entrybox.c  parse.c  song.c  ui.c  vocagtk.c
